Web: stops always visibles if sidebar is extended

--- a/app/assets/stylesheets/plannings.css.scss
+++ b/app/assets/stylesheets/plannings.css.scss
@@ -173,7 +173,7 @@
           vertical-align: top;
           margin: 2px;
 
-          #out_of_route {
+          .stops {
             display: block !important;
           }
         }
